[gd_scene load_steps=26 format=2]

[ext_resource path="res://BraveEightyoneRegular-ZVGvm.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/Non_movable Box.png" type="Texture" id=2]
[ext_resource path="res://Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://RobotO.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://RobotB.tscn" type="PackedScene" id=6]
[ext_resource path="res://RedButtonBox l7.gd" type="Script" id=10]
[ext_resource path="res://sprites/tile.png" type="Texture" id=12]
[ext_resource path="res://Double finish.wav" type="AudioStream" id=13]
[ext_resource path="res://Clavology.wav" type="AudioStream" id=14]
[ext_resource path="res://sprites/OrangeEnter.png" type="Texture" id=15]
[ext_resource path="res://sprites/CornerTile.png" type="Texture" id=16]
[ext_resource path="res://sprites/Wall_tile.png" type="Texture" id=17]
[ext_resource path="res://sprites/BlueEnter.png" type="Texture" id=18]
[ext_resource path="res://sprites/buttons.png" type="Texture" id=21]
[ext_resource path="res://sprites/buttonBoxs.png" type="Texture" id=22]
[ext_resource path="res://BLUEbutton l7.gd" type="Script" id=23]

[sub_resource type="Animation" id=1]
resource_name = "move"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 112 ), Vector2( 128, 112 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 256.001, 256 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 384.001, 384 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 256, 256 )

[sub_resource type="Animation" id=5]
resource_name = "move"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192.128, 112 ), Vector2( 192, 176 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 232 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=8]
size = 43
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Level7" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tiles" type="Node2D" parent="."]
position = Vector2( 24, 16 )

[node name="side1" type="Node2D" parent="tiles"]

[node name="WTile" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 176 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile11" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 240 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile12" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 304 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile5" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile9" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="WTile10" type="Sprite" parent="tiles/side1"]
position = Vector2( 320, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile6" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="WTile7" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile8" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="Tile" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile5" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile6" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )
offset = Vector2( 512, 512 )

[node name="Tile7" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 21 )
offset = Vector2( 512, 512 )
hframes = 4
vframes = 5
frame = 14

[node name="Tile8" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile9" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="CTile" type="Sprite" parent="tiles/side1"]
position = Vector2( 96, 80 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 16 )

[node name="CTile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 96, 336 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 16 )

[node name="CTile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 352, 80 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 16 )

[node name="CTile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 352, 336 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 16 )

[node name="RedButtonBox" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 112 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 22 )
offset = Vector2( 512, 512 )
vframes = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="tiles/side1/RedButtonBox"]
anims/move = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="tiles/side1/RedButtonBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles/side1/RedButtonBox/StaticBody2D"]
position = Vector2( 512.002, 511.998 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="tiles/side1/RedButtonBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles/side1/RedButtonBox/Area2D"]
position = Vector2( 512.002, 511.998 )
shape = SubResource( 3 )

[node name="Exit" parent="tiles/side1" instance=ExtResource( 3 )]
position = Vector2( 192, 432 )
exit = 2

[node name="Enter" type="Sprite" parent="tiles/side1"]
position = Vector2( 224, 16 )
scale = Vector2( 0.06225, 0.063 )
texture = ExtResource( 15 )
hframes = 2
vframes = 2
frame = 2

[node name="tiles2" type="Node2D" parent="."]
position = Vector2( 552, 16 )

[node name="side1" type="Node2D" parent="tiles2"]

[node name="WTile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 176 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )
offset = Vector2( 512, 512 )

[node name="WTile11" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 240 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile12" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 304 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile5" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile9" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="WTile10" type="Sprite" parent="tiles2/side1"]
position = Vector2( 320, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile6" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile7" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile8" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="WTile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="WTile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 17 )
offset = Vector2( 512, 512 )

[node name="Tile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile5" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile6" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile7" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile8" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 12 )
offset = Vector2( 512, 512 )

[node name="Tile9" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )
offset = Vector2( 512, 512 )

[node name="CTile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 352, 80 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 16 )

[node name="CTile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 96, 336 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 16 )

[node name="CTile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 96, 80 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 21 )
hframes = 4
vframes = 5
frame = 6

[node name="Area2D" type="Area2D" parent="tiles2/side1/CTile3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles2/side1/CTile3/Area2D"]
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="tiles2/side1/CTile3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles2/side1/CTile3/Area2D2"]
position = Vector2( -6400, 2048 )
shape = SubResource( 4 )

[node name="CTile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 352, 336 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 16 )

[node name="RedButtonBox2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192.128, 112 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 22 )
offset = Vector2( 512, 512 )
vframes = 2
frame = 1
script = ExtResource( 23 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="tiles2/side1/RedButtonBox2"]
anims/move = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="tiles2/side1/RedButtonBox2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles2/side1/RedButtonBox2/StaticBody2D"]
position = Vector2( 512.002, 511.998 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="tiles2/side1/RedButtonBox2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles2/side1/RedButtonBox2/Area2D"]
position = Vector2( 512.002, 511.998 )
shape = SubResource( 3 )

[node name="Exit" parent="tiles2/side1" instance=ExtResource( 3 )]
position = Vector2( 64, 240 )

[node name="Enter2" type="Sprite" parent="tiles2"]
position = Vector2( 224, 16 )
scale = Vector2( 0.06225, 0.063 )
texture = ExtResource( 18 )
hframes = 2
vframes = 2
frame = 2

[node name="OOB" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OOB"]
position = Vector2( 80, 192 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OOB"]
position = Vector2( 416, 192 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OOB"]
position = Vector2( 592, -44.8 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OOB"]
position = Vector2( 944, 192 )
shape = SubResource( 6 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="OOB"]
position = Vector2( 816, -168 )
shape = SubResource( 6 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="OOB"]
position = Vector2( 736, -168 )
shape = SubResource( 6 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="OOB"]
position = Vector2( 592, 488 )
shape = SubResource( 6 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="OOB"]
position = Vector2( 536, 280 )
shape = SubResource( 6 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="OOB"]
position = Vector2( 232, 616 )
shape = SubResource( 6 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="OOB"]
position = Vector2( 144, 616 )
shape = SubResource( 6 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="OOB"]
position = Vector2( 208, -168 )
shape = SubResource( 6 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="OOB"]
position = Vector2( 286.3, -168 )
shape = SubResource( 6 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="OOB"]
position = Vector2( 1040, 56 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="OOB"]
position = Vector2( 512, 56 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="OOB"]
position = Vector2( 328, -12.2 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="OOB"]
position = Vector2( -24, 56 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="OOB"]
position = Vector2( -104, 397.686 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="OOB"]
position = Vector2( 480, 397.686 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="OOB"]
position = Vector2( 807.872, 397.686 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="OOB"]
position = Vector2( 777.5, -12.2 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="OOB"]
position = Vector2( 777.5, 457.48 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="OOB"]
position = Vector2( 280, 457.48 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D23" type="CollisionShape2D" parent="OOB"]
position = Vector2( 248, 288 )
shape = SubResource( 7 )

[node name="CollisionShape2D24" type="CollisionShape2D" parent="OOB"]
position = Vector2( 712, 288 )
shape = SubResource( 7 )

[node name="CollisionShape2D25" type="CollisionShape2D" parent="OOB"]
position = Vector2( 904, 160 )
shape = SubResource( 7 )

[node name="RobotO" parent="." instance=ExtResource( 4 )]
position = Vector2( 249.5, 37 )

[node name="RobotB" parent="." instance=ExtResource( 6 )]
position = Vector2( 777.5, 39 )

[node name="World" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="World"]
position = Vector2( 512, 256 )
current = true
limit_left = -256
limit_top = -256
limit_right = 1280
limit_bottom = 856

[node name="Level" type="Label" parent="."]
visible = false
margin_left = 379.0
margin_top = 144.0
margin_right = 645.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 8 )
text = "Level 7"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discription" type="Label" parent="."]
visible = false
margin_left = -58.7745
margin_top = 397.686
margin_right = 1094.23
margin_bottom = 583.686
custom_fonts/font = SubResource( 8 )
text = "Someday..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_timer" type="Timer" parent="."]
one_shot = true

[node name="Pause" type="CanvasLayer" parent="."]

[node name="Pause" parent="Pause" instance=ExtResource( 5 )]
visible = false
level = 7

[node name="DFinish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -4.0
autoplay = true

[connection signal="body_entered" from="tiles/side1/RedButtonBox/Area2D" to="tiles/side1/RedButtonBox" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="tiles2/side1/CTile3/Area2D" to="tiles/side1/RedButtonBox" method="_on_Button_body_entered"]
[connection signal="body_exited" from="tiles2/side1/CTile3/Area2D" to="tiles/side1/RedButtonBox" method="_on_Button_body_exited"]
[connection signal="body_entered" from="tiles2/side1/CTile3/Area2D2" to="tiles2/side1/RedButtonBox2" method="_on_Button_body_entered"]
[connection signal="body_exited" from="tiles2/side1/CTile3/Area2D2" to="tiles2/side1/RedButtonBox2" method="_on_Button_body_exited"]
[connection signal="body_entered" from="tiles2/side1/RedButtonBox2/Area2D" to="tiles/side1/RedButtonBox" method="_on_Area2D_body_entered"]
